--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -1,3 +1,4 @@
 <div class="todos-container">
-  <h1>Todos</h1>
+  <app-add-todo (addTodo)="addTodo($event)"></app-add-todo>
+  <app-todo-item *ngFor="let todo of todos" [todo]="todo" (deleteTodo)="deleteTodo($event)"></app-todo-item>
 </div>
